Update starter files